fixes scrollbar

--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -69,7 +69,7 @@ section{
     overflow-y: scroll;
 }
 ::-webkit-scrollbar {
-    width: 20px;
+    width: 5px;
   }
   
   /* Track */
